# bare-bluetooth-android

./: CMakeLists.txt  README.md  binding.cc  index.d.ts  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
lib/: AdvertiseCallback.java  AdvertiseHelper.java  ErrorHelper.java  GattCallback.java  GattServerCallback.java  GattServiceHelper.java  L2capAcceptor.java  L2capConnector.java  L2capReader.java  L2capUtil.java  ScanCallback.java  ScanHelper.java  ThreadHelper.java  central.d.ts  central.js  channel.d.ts  channel.js  characteristic.d.ts  characteristic.js  constants.js  device.d.ts  device.js  errors.d.ts  errors.js  peripheral.d.ts  peripheral.js  request.js  scan-record.d.ts  scan-record.js  scan-result.d.ts  scan-result.js  server.d.ts  server.js  service.d.ts  service.js
test/: central.js  l2cap.js  peripheral.js  scan-result.js  server.js  service-data.js
